[package]
name = "ld-nom"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { git = "https://github.com/rust-bakery/nom" }
nom_locate = { git = "https://github.com/TGMM/nom_locate" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0", "target-x86"], default-features = false }
clap = { version = "4.1.13", features = ["derive"] }
